--- a/src/css/global.sass
+++ b/src/css/global.sass
@@ -5,6 +5,7 @@
 	box-sizing: border-box
 
 body
+	padding-top: 100px
 	color: black
 	font: $font-stack
 	font-weight: 400
@@ -571,6 +572,8 @@ button, .btn, input[type="button"]
 	&.focus, &.active, &:focus, &:hover
 		text-decoration: none
 		//transition: all .1s ease
+	&.btn-warning
+		background-color: #f54f29
 
 button.invert, .btn.invert, input[type="button"].invert
 	&.focus, &:focus, &:hover
