--- a/src/index.jade
+++ b/src/index.jade
@@ -14,12 +14,8 @@ html(lang='en')
 		section.categories-slider
 			.container
 				.categories-slider-content
-					.categories-label
-						span популярные услуги:
 					.next-slide
-						span >
 					.prev-slide
-						span <
 					ul.categories-line
 						li(href="#" data-category="category-1").active
 							span Судебная практика
@@ -33,6 +29,7 @@ html(lang='en')
 						li#category-1.slide
 							.left-col
 								.slide-description
+									.slide-label популярная услуга:
 									h2 Судебная практика
 									p Описание услуги в нескольких словах. Это должен быть продающий текст.
 								ul.services-list
@@ -54,16 +51,17 @@ html(lang='en')
 									li Оформлению строительного паспорта
 									li Получению градостроительных условий и ограничений
 									li Изменению функционального назначения нежилого помещения
+								.buttons-holder
+									a.btn.btn-warning Заказать услугу
+									a.btn Заказать консультацию
 							.right-col
 								.image-holder
-									img(src="http://lawprepdehradun.com/images/about_law.png", alt="image")
-							.full-col
-								a.btn Заказать услугу
-								a.btn Заказать консультацию
+									img(src="img/content/law-lady.png", alt="image")
 
 						li#category-2.slide.hidden
 							.left-col
 								.slide-description
+									.slide-label популярная услуга:
 									h2 Миграционное право
 									p Описание услуги в нескольких словах. Это должен быть продающий текст.
 								ul.services-list
@@ -86,16 +84,17 @@ html(lang='en')
 									li Вводу в эксплуатацию
 									li Изготовлению технического паспорта
 									li Другим вопросам, касающимся строительства?
+								.buttons-holder
+									a.btn.btn-warning Заказать услугу
+									a.btn Заказать консультацию
 							.right-col
 								.image-holder
-									img(src="http://stfleurlaw.com/wp-content/uploads/2016/03/Law-OMC.jpg", alt="image")
-							.full-col
-								a.btn Заказать услугу
-								a.btn Заказать консультацию
+									img(src="http://lawprepdehradun.com/images/about_law.png", alt="image")
 
 						li#category-3.slide.hidden
 							.left-col
 								.slide-description
+									.slide-label популярная услуга:
 									h2 Интеллектуальное право
 									p Описание услуги в нескольких словах. Это должен быть продающий текст.
 								ul.services-list
@@ -117,16 +116,17 @@ html(lang='en')
 									li Наши знания и опыт позволят учесть все возможные риски и нюансы
 									li Наша компания предоставляет услуги в данной сфере уже более 7-ми лет
 									li Мы проконсультируем Вас независимо от сложности вопроса
+								.buttons-holder
+									a.btn.btn-warning Заказать услугу
+									a.btn Заказать консультацию
 							.right-col
 								.image-holder
-									img(src="http://www.startyourbusinessmag.com/wp-content/uploads/2013/07/law-320x256.jpg", alt="image")
-							.full-col
-								a.btn Заказать услугу
-								a.btn Заказать консультацию
+									img(src="http://stfleurlaw.com/wp-content/uploads/2016/03/Law-OMC.jpg", alt="image")
 
 						li#category-4.slide.hidden
 							.left-col
 								.slide-description
+									.slide-label популярная услуга:
 									h2 Абонентское обслуживание
 									p Описание услуги в нескольких словах. Это должен быть продающий текст.
 								ul.services-list
@@ -147,12 +147,12 @@ html(lang='en')
 								ul.additional
 									li Вы избежите множества рисков и необоснованных затрат
 									li И наконец-то лучшая характеристика нашей работы – это наши клиенты
+								.buttons-holder
+									a.btn.btn-warning Заказать услугу
+									a.btn Заказать консультацию
 							.right-col
 								.image-holder
 									img(src="http://landwehrlawmn.com/wp-content/uploads/2015/03/law-wallpapers-hd-1080p-1920x1080-desktop-02.jpg", alt="image")
-							.full-col
-								a.btn Заказать услугу
-								a.btn Заказать консультацию
 
 		section.search-section
 			.container
