contacts modal added

--- a/src/css/main.sass
+++ b/src/css/main.sass
@@ -405,10 +405,13 @@
 		vertical-align: top
 		font-size: 14px
 	.header-contacts-navigation-holder
+		padding-top: 20px
 		width: 40%
 		.header-contacts-holder
+			margin-bottom: 10px
 			li
 				display: inline-block
+				margin-right: 10px
 		.header-navigation-holder
 			li
 				display: inline-block
@@ -421,15 +424,18 @@
 			// max-width: 80px
 			height: 80px
 	.main-navigation-holder
+		padding-top: 20px
 		width: 40%
 		& > li
 			display: inline-block
 			margin-left: 10px
 			position: relative
+			padding-left: 10px
 			.submenu
 				display: none
 				background: #fff
 				position: absolute
+				padding: 10px
 			&:hover
 				.submenu
 					display: block
