--- a/src/css/modals.sass
+++ b/src/css/modals.sass
@@ -235,3 +235,13 @@
 		position: absolute
 		right: 6px
 		top: 6px
+
+#contacts-modal
+	background-color: rgba(255,255,255,.8)
+	.container
+		background: #fff
+		position: absolute
+		padding: 80px
+		left: 50%
+		transform: translate(-50%, 40px)
+
