--- a/src/partials/navigation.jade
+++ b/src/partials/navigation.jade
@@ -10,11 +10,11 @@
 			ul.header-contacts-holder
 				ul
 					li
-						svg(width="10" version="1.1" x="0px" y="0px" viewBox="0 0 12 13" enable-background="new 0 0 12 13" xml:space="preserve")
-							path(fill="#cccccc" d="M0,12.3L0.7,13L7,6.5l0,0l0,0L0.7,0L0,0.7l5.7,5.8L0,12.3z M5,12.3L5.7,13L12,6.5l0,0 l0,0L5.7,0L5,0.7l5.7,5.8L5,12.3z")
-						a(href="tel:0442214000") (093) 1000 176
+						a(href="tel:0981000176" data-modal="#contacts-modal") (098) 1000 176
 					li
-						a(href="tel:0442214000") (044) 221-4000
+						a(href="tel:0931000176" data-modal="#contacts-modal") (093) 1000 176
+					li
+						a(href="tel:0442214000" data-modal="#contacts-modal") (044) 221 4000
 			ul.header-navigation-holder
 				li.services-trigger
 					svg(width="10" version="1.1" x="0px" y="0px" viewBox="0 0 12 13" enable-background="new 0 0 12 13" xml:space="preserve")
@@ -34,9 +34,6 @@
 				img(src="img/content/main-logo.svg", alt="Justicon")
 
 		ul.main-navigation-holder
-			li
-				a(href='about.html')
-					span Все услуги
 			li
 				a(href='#')
 					span Почему мы
@@ -58,6 +55,9 @@
 						.block-item
 							.title
 			li
+				a(href='contacts.html')
+					span Информ-бюро
+			li
 				a(href='#')
 					span Пресс-центр
 				.submenu
@@ -76,8 +76,8 @@
 							.title
 								a(href='/press-tsentr/rassylka/') Рассылка
 			li
-				a(href='contacts.html')
-					span Информ-бюро
+				a(href='about.html')
+					span Все разделы
 			li
 				a(href='#')
 					span Укр
