--- a/src/index.jade
+++ b/src/index.jade
@@ -121,7 +121,7 @@ html(lang='en')
 									a.btn Заказать консультацию
 							.right-col
 								.image-holder
-									img(src="http://stfleurlaw.com/wp-content/uploads/2016/03/Law-OMC.jpg", alt="image")
+									img(src="img/content/category-icon-3.png", alt="image")
 
 						li#category-4.slide.hidden
 							.left-col
@@ -152,7 +152,7 @@ html(lang='en')
 									a.btn Заказать консультацию
 							.right-col
 								.image-holder
-									img(src="http://landwehrlawmn.com/wp-content/uploads/2015/03/law-wallpapers-hd-1080p-1920x1080-desktop-02.jpg", alt="image")
+									img(src="img/content/category-icon-5.png", alt="image")
 
 		section.search-section
 			.container
