--- a/src/css/main.sass
+++ b/src/css/main.sass
@@ -406,7 +406,7 @@
 		font-size: 14px
 	.header-contacts-navigation-holder
 		padding-top: 20px
-		width: 40%
+		width: 44%
 		.header-contacts-holder
 			margin-bottom: 10px
 			li
@@ -415,17 +415,28 @@
 		.header-navigation-holder
 			li
 				display: inline-block
-				margin-right: 10px
+				margin-right: 14px
+			.services-trigger
+				&:after
+					content: ''
+					background: url('../img/icons/toggle-sidebar-nav-collapse.svg') 50% 50% no-repeat
+					background-size: contain
+					top: 1px
+					position: relative
+					display: inline-block
+					margin-left: 4px
+					height: 11px
+					width: 11px
 	.logotype-holder
 		text-align: center
 		padding: 10px 0
-		width: 20%
+		width: 12%
 		img
 			// max-width: 80px
 			height: 80px
 	.main-navigation-holder
 		padding-top: 20px
-		width: 40%
+		width: 44%
 		& > li
 			display: inline-block
 			margin-left: 10px
@@ -713,14 +724,15 @@
 					font-weight: inherit
 				b
 					font-size: 22px
-					font-weight: 300
+					font-weight: 400
 				img, svg
 					display: inline-block
 					margin-bottom: 17px
 					width: 48px
 					border: 1px solid white
-					padding: 8px
+					padding: 10px
 					border-radius: 50%
+					overflow: visible
 				&:last-child
 					border-right: 0
 					margin-right: 0
