--- a/src/css/global.sass
+++ b/src/css/global.sass
@@ -20,6 +20,18 @@ body
 			width: 100%
 			// -webkit-overflow-scrolling: touch
 
+li
+	.submenu
+		display: none
+		background: #fff
+		position: absolute
+		padding: 10px
+		z-index: 1
+	&:hover
+		.submenu
+			display: block
+
+
 // webkit scroll
 // .modal-holder::-webkit-scrollbar-corner
 	// background-color: #ffffff
