--- a/src/css/elements.sass
+++ b/src/css/elements.sass
@@ -60,11 +60,10 @@
 	left: 0
 	overflow: hidden
 	width: 80px
-	padding-top: 66px
-	padding-top: 40px
+	padding-top: 10px
 	transition: width .6s, left .6s
 	z-index: 2
-	height: calc(100vh - 50px)
+	height: calc(100vh - 77px)
 	overflow-x: hidden
 	overflow-y: auto
 	@media (max-width: $tablet)
@@ -159,6 +158,7 @@
 						height: 39px
 		.submenu
 			// display: none
+			background: #e0eaf1
 			opacity: 0
 			pointer-events: none
 			transition: opacity .3s
@@ -167,10 +167,13 @@
 			left: 80px
 			left: 280px
 			width: 100%
-			// width: 0
-			max-width: calc(100vw - 280px)
-			max-height: calc(100vh - 80px)
+			padding: 0
+			transform: none
+			visibility: visible
+			// max-width: calc(100vw - 280px)
+			// max-height: calc(100vh - 80px)
 			max-height: 100%
+			min-height: calc(100vh - 77px)
 			overflow: auto
 			// transition: width 0.6s
 			&::-webkit-scrollbar
@@ -189,7 +192,6 @@
 				pointer-events: all
 			.inner-holder
 				display: block
-				background: #e0eaf1
 				width: calc(100vw - 300px)
 				& > li
 					display: block
